roughest draft